Bug 105209 - Wrong Swiss currency abbreviation
Summary: Wrong Swiss currency abbreviation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.4.0 target:5.3.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-09 14:42 UTC by DMS
Modified: 2017-01-11 22:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description DMS 2017-01-09 14:42:23 UTC
Description:
Applying the currency-format with the currency Swiss Francs selected in preferences leads to the old abbreviation „SFr“ shown in front of a value and not the current abbreviation „CHF“.

Steps to Reproduce:
1. in preferences/language settings/languages, choose:
- user surface: Standard - Deutsch (Deutschland)
- area scheme: Deutsch (Schweiz)
- standard currency: Standard - CHF
2. when command format/number format/currency is applied to cells, the abbreviation SFr is used instead of CHF
3.


Reproducible: Always

User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: de
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Mac OS X (All)
OS is 64bit: no
Builds ID: LibreOffice 5.2.3.3


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_6) AppleWebKit/601.7.8 (KHTML, like Gecko) iCab/5.7.0 Safari/601.7.7
Comment 1 Julien Nabet 2017-01-09 16:05:46 UTC
Considering http://opengrok.libreoffice.org/search?q=SFr&project=core&defs=&refs=&path=&hist=

Eike: could we just replace occurences of SFr by CHF or must we consider compatibility or other things?
Comment 2 DMS 2017-01-09 17:36:51 UTC
I think replacing is already the whole solution.
Comment 3 Julien Nabet 2017-01-09 17:53:20 UTC
I submitted a patch to review here:
https://gerrit.libreoffice.org/#/c/32905/
Comment 4 Eike Rathke (retired, only occasionally showing up) 2017-01-09 18:23:58 UTC
See my comment there ...
Comment 5 Julien Nabet 2017-01-09 19:10:35 UTC
DMS: just for the record, I abandonned the patch since it was wrong.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2017-01-10 13:29:21 UTC
@Julien: will you follow up on that or should I take over?
Comment 7 Julien Nabet 2017-01-10 14:04:00 UTC
(In reply to Eike Rathke from comment #6)
> @Julien: will you follow up on that or should I take over?

I won't follow up.
Comment 8 Eike Rathke (retired, only occasionally showing up) 2017-01-10 20:38:21 UTC
@DMS: are you sure about this change to "CHF"? Any references?

This is a bit odd. "SFr." indeed is outdated, but the common use seems to be "Fr." instead of "CHF", at least in common business if not banks. Even the coins show "1 Fr."

See also https://en.wikipedia.org/wiki/Swiss_franc that states "The ISO code of the currency used by banks and financial institutions is CHF, although "Fr." is used by most businesses and advertisers". For currency symbol it lists "CHF, Fr., SFr. (old)"

The German page https://de.wikipedia.org/wiki/Schweizer_Franken mentions "Währungszeichen Fr." and for currency symbol (Abkürzung) lists "Fr., SFr., CHF"

So, should we have "CHF" or "Fr." in locale data?
Comment 9 DMS 2017-01-10 22:51:30 UTC
I just went through the waste next to my desk and with a big surprise I found really one single receipt (under many others) that still said Fr. All others use CHF. And where ever you check prices in the internet or whatever machine-writen bill, bank or insurance document you look at it is always CHF.

Examples:
Computer webshop: https://shop.dataquest.ch/
Auctions: https://www.ricardo.ch/
Airlines: https://www.swiss.com/ch/de
Lotto: https://www.swisslos.ch/de/home.html
Public trafic: http://www.zvv.ch/zvv/de/abos-und-tickets/tarif/verbundtarif-und-richtlinien/preise-gebuehren-zahlungsmittel.html

DMS
Comment 10 Eike Rathke (retired, only occasionally showing up) 2017-01-11 12:35:07 UTC
Convincing :-)
Comment 11 Commit Notification 2017-01-11 12:58:17 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=28a0737f8c21e5c9f789af328348e51b6044c28c

Resolves: tdf#105209 CHF currency symbol is CHF instead of SFr.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2017-01-11 22:35:42 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=771fad2dfe556a5c47ccd5e987fc304350600557&h=libreoffice-5-3

Resolves: tdf#105209 CHF currency symbol is CHF instead of SFr.

It will be available in 5.3.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.