tdf#105209: use "CHF" for Swiss currency abbreviation

Change-Id: I069efdc20be946ff35f9513e32c5fd80b4bbce20